# HiMathExecs

./: README.md  pyproject.toml
.github/workflows/: CHECK_ANSWER.yml  EXEC_MATRICES_DOT.yml  EXEC_MATRIX_DET.yml
hi_math_execs/: exec_matrices_dot.py  exec_matrix_det.py  utils.py
hi_math_execs/constants/: __init__.py  difficulty.py
scripts/: exec_matrix_det.py
